[gd_scene load_steps=87 format=3 uid="uid://bqxxuvy4xijdd"]

[ext_resource type="PackedScene" uid="uid://1hm25sspnfju" path="res://PlayerStuff/UI/character_ui.tscn" id="1_4im0x"]
[ext_resource type="Script" path="res://Inventory/inventory_interface.gd" id="1_5u8ub"]
[ext_resource type="PackedScene" uid="uid://bsf842ogqigq6" path="res://WorldStuff/world.tscn" id="1_bmo7q"]
[ext_resource type="PackedScene" uid="uid://ddit4uvjadc7n" path="res://Inventory/inventory.tscn" id="1_k0x8p"]
[ext_resource type="PackedScene" uid="uid://lmo2htf7heq1" path="res://WorldStuff/map.tscn" id="2_f3upd"]
[ext_resource type="Script" path="res://WorldStuff/Combat/CombatManager.gd" id="2_rvt2f"]
[ext_resource type="PackedScene" uid="uid://dy1ojuscnguqy" path="res://Inventory/inventory_slot.tscn" id="3_lbfnn"]
[ext_resource type="PackedScene" uid="uid://cda1qjv2pgm6a" path="res://PlayerStuff/player_pawn.tscn" id="3_pihb5"]
[ext_resource type="PackedScene" uid="uid://sd2k112rexxb" path="res://WorldStuff/Combat/combat_slot.tscn" id="3_rttpj"]
[ext_resource type="PackedScene" uid="uid://dnrhfjf1r1am4" path="res://equip_inventory.tscn" id="4_vohes"]
[ext_resource type="Resource" uid="uid://ckv21i83884nx" path="res://Monsters/test_mob.tres" id="8_8y5ip"]
[ext_resource type="Script" path="res://PlayerStuff/ItemManager.gd" id="10_23yfe"]
[ext_resource type="Script" path="res://PlayerStuff/PlayerActions/PlayerDamageEffect.gd" id="13_a74p7"]
[ext_resource type="Script" path="res://PlayerStuff/PlayerActions/PlayerAction.gd" id="14_16eow"]
[ext_resource type="Script" path="res://EventLogger.gd" id="15_bqke4"]
[ext_resource type="Script" path="res://PlayerStuff/PlayerActions/GridTargeting.gd" id="15_dmw7u"]
[ext_resource type="Script" path="res://Vignette.gd" id="16_0s3vl"]
[ext_resource type="Script" path="res://Inventory/inventory_data.gd" id="16_rtwg8"]
[ext_resource type="PackedScene" uid="uid://cihycsqbma6tl" path="res://WorldStuff/Cells/Events/Vignette/vignette_option.tscn" id="17_pnrgr"]
[ext_resource type="Resource" uid="uid://cq7iso4use823" path="res://Items/second_item.tres" id="17_rpo8l"]
[ext_resource type="Script" path="res://Inventory/inventory_slot_data.gd" id="18_ub1ry"]
[ext_resource type="Script" path="res://Player.gd" id="18_x7bm5"]
[ext_resource type="Script" path="res://WorldStuff/Combat/EnemyCombatData.gd" id="19_8n7hm"]
[ext_resource type="Script" path="res://Inventory/equipment_inventory_data.gd" id="19_ogwxi"]
[ext_resource type="Script" path="res://WorldStuff/Combat/EnemySpawnData.gd" id="20_c4fi3"]
[ext_resource type="Script" path="res://WorldStuff/Cells/CombatEvent.gd" id="21_ytyt7"]
[ext_resource type="Texture2D" uid="uid://ddlnfap8mge78" path="res://Art/Textures/Rocks018_1K-JPG/Rocks018_1K-JPG_Color.jpg" id="22_mqddm"]
[ext_resource type="Texture2D" uid="uid://cvtr12pvnfxcq" path="res://Art/Textures/PavingStones009_1K-JPG/PavingStones009_1K-JPG_Roughness.jpg" id="27_ene1s"]
[ext_resource type="Texture2D" uid="uid://bpt48hsoq7er2" path="res://icon.svg" id="27_t4jc7"]
[ext_resource type="Script" path="res://Inventory/equip_slot_data.gd" id="28_jv8qw"]
[ext_resource type="Script" path="res://UnitStuff/StatModifier.gd" id="29_33la7"]
[ext_resource type="Script" path="res://PlayerStuff/PlayerActions/PlayerActionManager.gd" id="30_3j0v7"]
[ext_resource type="Script" path="res://PlayerStatMod.gd" id="30_ywxhv"]
[ext_resource type="Texture2D" uid="uid://c88w05l3kynau" path="res://Art/Textures/Rocks018_1K-JPG/Rocks018_1K-JPG_Roughness.jpg" id="32_q441s"]
[ext_resource type="Script" path="res://Inventory/equip_item_data.gd" id="33_tc6nk"]
[ext_resource type="Script" path="res://PlayerStuff/SanityManager.gd" id="34_una0w"]
[ext_resource type="Script" path="res://PlayerStats.gd" id="35_qbqb3"]
[ext_resource type="Script" path="res://UnitStuff/UnitStat.gd" id="37_8xvld"]
[ext_resource type="PackedScene" uid="uid://dduungrmy6hct" path="res://PlayerStuff/PlayerActions/EffectVFX/slashfx.tscn" id="39_3dj3e"]
[ext_resource type="Script" path="res://PlayerEquipManager.gd" id="44_05mq3"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_7laj5"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ps5pd"]
bg_color = Color(0.412152, 0.412152, 0.412152, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1xru2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="Resource" id="Resource_ylvi6"]
script = ExtResource("20_c4fi3")
enemy = ExtResource("8_8y5ip")
spawn_chance = 100.0
slot = 2

[sub_resource type="Resource" id="Resource_faped"]
resource_local_to_scene = true
script = ExtResource("20_c4fi3")
enemy = ExtResource("8_8y5ip")
spawn_chance = 44.709
slot = 3

[sub_resource type="Resource" id="Resource_j83k6"]
script = ExtResource("20_c4fi3")
enemy = ExtResource("8_8y5ip")
spawn_chance = 67.416
slot = 1

[sub_resource type="Resource" id="Resource_aqvyc"]
script = ExtResource("19_8n7hm")
spawn_data = Array[ExtResource("20_c4fi3")]([SubResource("Resource_ylvi6"), SubResource("Resource_faped"), SubResource("Resource_j83k6")])

[sub_resource type="Resource" id="Resource_oe5lp"]
script = ExtResource("21_ytyt7")
combat_data = SubResource("Resource_aqvyc")
sprite = ExtResource("22_mqddm")

[sub_resource type="Resource" id="Resource_noflh"]
script = ExtResource("18_ub1ry")
item_data = ExtResource("17_rpo8l")
quantity = 1

[sub_resource type="Resource" id="Resource_5l62i"]
script = ExtResource("13_a74p7")

[sub_resource type="Resource" id="Resource_3nm4a"]
script = ExtResource("15_dmw7u")
range_type = 2
area_type = 1

[sub_resource type="Resource" id="Resource_iaa8s"]
script = ExtResource("14_16eow")
action_name = "HEADBUTT"
offensive_point_cost = 1
defensive_point_cost = 1
cooldown = 3
use_weapon_targeting = true
targeting = SubResource("Resource_3nm4a")
player_action_effects = Array[Resource("res://PlayerStuff/PlayerActions/PlayerActionEffect.gd")]([SubResource("Resource_5l62i")])
combat_action = true

[sub_resource type="Resource" id="Resource_6kvbt"]
script = ExtResource("29_33la7")
add_amount = 5
multiplier = 0

[sub_resource type="Resource" id="Resource_ci4t1"]
script = ExtResource("29_33la7")
add_amount = 1
multiplier = 0

[sub_resource type="Resource" id="Resource_ed7lh"]
script = ExtResource("29_33la7")
add_amount = 3
multiplier = 0

[sub_resource type="Resource" id="Resource_kpama"]
script = ExtResource("30_ywxhv")
bravery_mod = SubResource("Resource_6kvbt")
reaction_mod = SubResource("Resource_ed7lh")
phys_armor_per_turn_mod = SubResource("Resource_ci4t1")

[sub_resource type="Resource" id="Resource_0p86q"]
script = ExtResource("33_tc6nk")
stat_modifier = SubResource("Resource_kpama")
gain_action = SubResource("Resource_iaa8s")
equip_slot = 0
is_two_handed = false
item_name = "Simple Helm"
description = ""
stackable = false
image = ExtResource("27_t4jc7")

[sub_resource type="Resource" id="Resource_ks4xu"]
script = ExtResource("18_ub1ry")
item_data = SubResource("Resource_0p86q")
quantity = 1

[sub_resource type="Resource" id="Resource_uswu2"]
script = ExtResource("33_tc6nk")
equip_slot = 2
is_two_handed = false
item_name = "OFFHAND"
description = ""
stackable = false
image = ExtResource("32_q441s")

[sub_resource type="Resource" id="Resource_52pxt"]
script = ExtResource("18_ub1ry")
item_data = SubResource("Resource_uswu2")
quantity = 1

[sub_resource type="Resource" id="Resource_7plu4"]
script = ExtResource("33_tc6nk")
equip_slot = 0
is_two_handed = false
item_name = ""
description = ""
stackable = false
image = ExtResource("27_ene1s")

[sub_resource type="Resource" id="Resource_adp6h"]
script = ExtResource("28_jv8qw")
item_data = SubResource("Resource_7plu4")
quantity = 1

[sub_resource type="Resource" id="Resource_h0xrx"]
script = ExtResource("16_rtwg8")
slot_datas = Array[ExtResource("18_ub1ry")]([SubResource("Resource_noflh"), SubResource("Resource_ks4xu"), SubResource("Resource_52pxt"), SubResource("Resource_adp6h"), null, null, null, null, null, null])

[sub_resource type="Resource" id="Resource_djn5y"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([])

[sub_resource type="Resource" id="Resource_7ui7q"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_ex2me"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_gara6"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_7skbw"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_uysf5"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_7nhwe"]
script = ExtResource("13_a74p7")
test_vfx_effect = ExtResource("39_3dj3e")

[sub_resource type="Resource" id="Resource_5kbvc"]
script = ExtResource("15_dmw7u")
range_type = 0
area_type = 0

[sub_resource type="Resource" id="Resource_uo68b"]
script = ExtResource("14_16eow")
action_name = "TESTER"
offensive_point_cost = 1
defensive_point_cost = 1
cooldown = 5
use_weapon_targeting = false
targeting = SubResource("Resource_5kbvc")
player_action_effects = Array[Resource("res://PlayerStuff/PlayerActions/PlayerActionEffect.gd")]([SubResource("Resource_7nhwe")])
combat_action = true

[sub_resource type="Resource" id="Resource_krw4x"]
script = ExtResource("37_8xvld")
value_name = ""
base_value = 14

[sub_resource type="Resource" id="Resource_3mgx5"]
script = ExtResource("37_8xvld")
value_name = ""
base_value = 2

[sub_resource type="Resource" id="Resource_h05og"]
script = ExtResource("37_8xvld")
value_name = ""
base_value = 6

[sub_resource type="Resource" id="Resource_fed4r"]
script = ExtResource("37_8xvld")
value_name = ""
base_value = 100

[sub_resource type="Resource" id="Resource_4rf15"]
script = ExtResource("37_8xvld")
value_name = ""
base_value = 0

[sub_resource type="Resource" id="Resource_0jxdr"]
script = ExtResource("37_8xvld")
value_name = ""
base_value = 0

[sub_resource type="Resource" id="Resource_mi3fp"]
script = ExtResource("37_8xvld")
value_name = ""
base_value = 5

[sub_resource type="Resource" id="Resource_mjk8s"]
script = ExtResource("37_8xvld")
value_name = ""
base_value = 3

[sub_resource type="Resource" id="Resource_5hovn"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_cqr08"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_8le26"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_i6ghx"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_y8jys"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[sub_resource type="Resource" id="Resource_0f78y"]
script = ExtResource("19_ogwxi")
slot_datas = Array[ExtResource("18_ub1ry")]([null])

[node name="Game" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="UI" type="CanvasLayer" parent="."]

[node name="CombatManager" type="PanelContainer" parent="UI" node_paths=PackedStringArray("back_row_holder", "middle_row_holder", "front_row_holder")]
visible = false
anchors_preset = -1
anchor_right = 0.759
anchor_bottom = 0.85
offset_right = 0.719849
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxEmpty_7laj5")
script = ExtResource("2_rvt2f")
combat_slot_scene = ExtResource("3_rttpj")
back_row_holder = NodePath("VBoxContainer/BackRow")
middle_row_holder = NodePath("VBoxContainer/MiddleRow")
front_row_holder = NodePath("VBoxContainer/FrontRow")
test_enemy = ExtResource("8_8y5ip")

[node name="VBoxContainer" type="VBoxContainer" parent="UI/CombatManager"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="BackRow" type="HBoxContainer" parent="UI/CombatManager/VBoxContainer"]
layout_mode = 2

[node name="MiddleRow" type="HBoxContainer" parent="UI/CombatManager/VBoxContainer"]
layout_mode = 2

[node name="FrontRow" type="HBoxContainer" parent="UI/CombatManager/VBoxContainer"]
layout_mode = 2

[node name="DEBUG ACTION" type="Label" parent="UI/CombatManager"]
layout_mode = 2
size_flags_horizontal = 4
text = "ACTION
"

[node name="Control" type="Control" parent="UI/CombatManager"]
layout_mode = 2
mouse_filter = 2

[node name="EndTurnButton" type="Button" parent="UI/CombatManager/Control"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -114.0
offset_bottom = 55.0
grow_horizontal = 0
text = "END TURN"

[node name="CharacterUI" parent="UI" node_paths=PackedStringArray("phys_ico", "def_ico") instance=ExtResource("1_4im0x")]
anchors_preset = 6
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -538.0
offset_bottom = 542.0
grow_vertical = 2
mouse_filter = 0
phys_ico = NodePath("Icons/PhysIco")
def_ico = NodePath("Icons/DefIco")

[node name="EquipInventory" parent="UI" instance=ExtResource("4_vohes")]
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 1587.0
offset_top = 361.0
offset_right = 1587.0
offset_bottom = 361.0
grow_horizontal = 1
grow_vertical = 1

[node name="InventoryInterface" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
script = ExtResource("1_5u8ub")

[node name="PlayerInventory" parent="UI/InventoryInterface" instance=ExtResource("1_k0x8p")]
layout_mode = 2
anchors_preset = 0
anchor_right = 0.0
anchor_bottom = 0.0
offset_top = 50.0
offset_right = 251.0
offset_bottom = 102.0

[node name="GrabbedSlot" parent="UI/InventoryInterface" instance=ExtResource("3_lbfnn")]
layout_mode = 0
offset_left = 886.0
offset_top = 212.0
offset_right = 922.0
offset_bottom = 248.0

[node name="ExternalInvntory" parent="UI/InventoryInterface" instance=ExtResource("1_k0x8p")]
layout_mode = 1
offset_left = 654.0
offset_top = 27.0
offset_right = -1266.0
offset_bottom = -1053.0

[node name="ConfirmDrop" type="ConfirmationDialog" parent="UI"]
position = Vector2i(300, 300)
dialog_text = "Drop Item?"

[node name="EventLog" type="PanelContainer" parent="UI"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -163.0
offset_right = -466.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("15_bqke4")

[node name="EventText" type="RichTextLabel" parent="UI/EventLog"]
layout_mode = 2
bbcode_enabled = true
scroll_following = true

[node name="Vignette" type="PanelContainer" parent="UI"]
visible = false
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 114.0
offset_right = -593.0
offset_bottom = -158.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("16_0s3vl")
option_scene = ExtResource("17_pnrgr")

[node name="Panel" type="Panel" parent="UI/Vignette"]
layout_direction = 1
layout_mode = 2

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Vignette/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 34.0
offset_top = 40.0
offset_right = -61.0
offset_bottom = -319.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/normal = SubResource("StyleBoxFlat_ps5pd")
bbcode_enabled = true
text = "[center]Title of event - Incluse center tags[/center]
this is the body of the event"
fit_content = true

[node name="option_holder" type="HBoxContainer" parent="UI/Vignette/Panel"]
layout_mode = 0
offset_left = 38.0
offset_top = 599.0
offset_right = 1156.0
offset_bottom = 915.0

[node name="GamePanel" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
theme_override_styles/panel = SubResource("StyleBoxFlat_1xru2")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_right = -464.0
offset_bottom = -164.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
handle_input_locally = false
size = Vector2i(1456, 916)
render_target_update_mode = 4

[node name="World" parent="SubViewportContainer/SubViewport" node_paths=PackedStringArray("map", "player_pawn") instance=ExtResource("1_bmo7q")]
map = NodePath("../../../Map")
player_pawn = NodePath("PlayerPawn")
text_cell_event = SubResource("Resource_oe5lp")

[node name="PlayerPawn" parent="SubViewportContainer/SubViewport/World" node_paths=PackedStringArray("raycast") instance=ExtResource("3_pihb5")]
raycast = NodePath("RayCast3D")

[node name="Map" parent="." instance=ExtResource("2_f3upd")]
visible = false

[node name="ItemManager" type="Node" parent="."]
script = ExtResource("10_23yfe")

[node name="Player" type="Node" parent="." node_paths=PackedStringArray("equip_controller")]
script = ExtResource("18_x7bm5")
inventory_data = SubResource("Resource_h0xrx")
equip_inventory_data = Array[ExtResource("19_ogwxi")]([SubResource("Resource_djn5y"), SubResource("Resource_7ui7q"), SubResource("Resource_ex2me"), SubResource("Resource_gara6"), SubResource("Resource_7skbw"), SubResource("Resource_uysf5")])
equip_controller = NodePath("PlayerEquipManager")
test_learn_action = SubResource("Resource_uo68b")

[node name="PlayerActionManager" type="Node" parent="Player"]
script = ExtResource("30_3j0v7")

[node name="SanityManager" type="Node" parent="Player"]
script = ExtResource("34_una0w")

[node name="PlayerStats" type="Node" parent="Player"]
script = ExtResource("35_qbqb3")
bravery = SubResource("Resource_krw4x")
reaction = SubResource("Resource_3mgx5")
willpower = SubResource("Resource_h05og")
max_health = SubResource("Resource_fed4r")
phys_armor_per_turn = SubResource("Resource_4rf15")
mag_armor_per_turn = SubResource("Resource_0jxdr")
physical_power = SubResource("Resource_mi3fp")
magical_power = SubResource("Resource_mjk8s")

[node name="PlayerEquipManager" type="Node" parent="Player"]
script = ExtResource("44_05mq3")
helm_slot_inventory = SubResource("Resource_5hovn")
chest_slot_inventory = SubResource("Resource_cqr08")
leg_slot_inventory = SubResource("Resource_8le26")
feet_slot_inventory = SubResource("Resource_i6ghx")
weapon_slot_inventory = SubResource("Resource_y8jys")
offhand_slot_inventory = SubResource("Resource_0f78y")

[connection signal="pressed" from="UI/CombatManager/Control/EndTurnButton" to="UI/CombatManager" method="_on_end_turn_button_pressed"]
[connection signal="gui_input" from="UI/InventoryInterface" to="UI/InventoryInterface" method="_on_gui_input"]
[connection signal="canceled" from="UI/ConfirmDrop" to="UI/InventoryInterface" method="_on_confirmation_dialog_canceled"]
[connection signal="confirmed" from="UI/ConfirmDrop" to="UI/InventoryInterface" method="_on_confirmation_dialog_confirmed"]
